--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@d-lab/common-kit": "^0.7.4",
+    "@d-lab/common-kit": "^0.7.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@imtbl/imx-link-sdk": "^2.0.25",
@@ -12,10 +12,13 @@
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.12",
     "@mui/x-data-grid": "^6.0.4",
+    "@web3modal/ethereum": "^2.2.0",
+    "@web3modal/react": "^2.2.0",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
@@ -23,6 +26,7 @@
     "react-social-icons": "^5.15.0",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
+    "wagmi": "^0.12.10",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
