--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 PORT=
 REACT_APP_IMX_OWNER=0x5FDCCA53617f4d2b9134B29090C87D01058e27e9
 REACT_APP_IMX_SANDBOX_OWNER=0x7917eDb51ecD6CdB3F9854c3cc593F33de10c623
+REACT_APP_LINK=https://link.x.immutable.com
+REACT_APP_LINK_SANDBOX=https://link.sandbox.x.immutable.com
