--- a/package.json
+++ b/package.json
@@ -2,76 +2,39 @@
   "name": "imx-dashboard",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@d-lab/common-kit": "^0.7.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@imtbl/core-sdk": "^1.1.0",
     "@imtbl/imx-link-sdk": "^2.0.25",
-    "@imtbl/imx-sdk": "^1.41.3",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.124",
-    "@mui/material": "^5.11.12",
-    "@mui/x-data-grid": "^6.0.4",
-    "@web3modal/ethereum": "^2.2.0",
-    "@web3modal/react": "^2.2.0",
-    "axios": "^1.3.4",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.127",
+    "@mui/material": "^5.12.1",
+    "@mui/x-data-grid": "^6.2.0",
+    "@types/node": "18.15.12",
+    "@types/react": "18.0.37",
+    "@types/react-dom": "18.0.11",
+    "@web3modal/ethereum": "^2.3.3",
+    "@web3modal/react": "^2.3.3",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
     "date-fns": "^2.29.3",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
     "ethers": "^5.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "react-social-icons": "^5.15.0",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.5",
-    "wagmi": "^0.12.10",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.14",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "assert": "^2.0.0",
-    "autoprefixer": "^10.4.13",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "process": "^0.11.10",
-    "react-app-rewired": "^2.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "tailwindcss": "^3.2.7",
-    "url": "^0.11.0"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "next": "13.3.0",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.1",
+    "typescript": "5.0.4",
+    "wagmi": "^0.12.12"
   }
 }
